# nm-cadence

./: .gitignore  NM_GOBY.html  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: publish.yml
.tauri/: updater.key  updater.key.pub
DESIGN_REFERENCE/: 1on1 Tracker - Directions.dc.html  Cadence - App.dc.html
sample-vault/: tasks.md
sample-vault/people/: ana-reyes.md  marcus-koh.md  sofia-petrov.md  theo-okafor.md
scripts/: generate-update-manifest.mjs
src/: App.svelte  app.css  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs  vault.rs
src/lib/: api.js  sample.js  stores.js
src/lib/components/: ConfirmModal.svelte  ConversationsView.svelte  DashboardView.svelte  PeopleView.svelte  PersonCard.svelte  PersonDetail.svelte  SettingsView.svelte  Sidebar.svelte  TaskCard.svelte  TasksView.svelte  TodayView.svelte  UpdaterPanel.svelte
