[package]
name = "cadence"
version = "0.1.0"
description = "Cadence — 1:1 conversation tracker"
authors = ["you"]
edition = "2021"

# The library that main.rs calls into. Tauri 2 splits the app into a lib + thin bin.
[lib]
name = "cadence_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
